# Proyecto-TecConcurrentes

./: .cproject  .gitignore  .project  CMakeLists.txt  makefile
Release/: CMakeCache.txt  Makefile  cmake_install.cmake
Release/src/: Makefile  cmake_install.cmake
Release/src/lib/: Makefile  cmake_install.cmake
Release/src/process/: Makefile  cmake_install.cmake
etc/: app.config
scripts/: run.sh
src/: CMakeLists.txt
src/lib/: .cproject  CMakeLists.txt  Process.h
src/lib/ArgumentHandler/: ArgHandler.h
src/lib/ConfigurationReader/: Configuration.cpp  Configuration.h
src/lib/Fifos/: Fifo.cpp  Fifo.h  FifoEscritura.cpp  FifoEscritura.h  FifoLectura.cpp  FifoLectura.h  FifoReader.cpp  FifoReader.h  FifoWriter.cpp  FifoWriter.h
src/lib/LockFile/: LockFile.cpp  LockFile.h
src/lib/Logger/: Logger.cpp  Logger.h
src/lib/Pipes/: Pipe.cpp  Pipe.h
src/lib/Semaphore/: Semaphore.cpp  Semaphore.h
src/lib/SharedMemory/: MemoriaCompartida2.h  SharedMemory.h
src/lib/Signals/: EventHandler.h  SIGINT_Handler.h  SignalHandler.cpp  SignalHandler.h
src/lib/syscalls/: SysCalls.h
src/lib/syscalls/exceptions/: SigIntException.h  SysCallException.h
src/lib/utils/: Helper.h  SysCalls.h  utils.h
src/process/: BaseController.h  CMakeLists.txt
src/process/controller/: .cproject  .project
src/process/controllerQueue/: .cproject  .cproject~  .gitignore  .project
src/process/crane/: .cproject  .project
src/process/dummy/: .cproject  .project  CMakeLists.txt  (+1 more)
src/utils/: ArgsResolver.h  Configuration.cpp  Configuration.h  Process.h  SharedData.h  SysCalls.h
(+45 files in other folders)
